# Xen_Moe

./: README.md  setup.py
csrc/: CMakeLists.txt  backend.cc  backend.h  config.hpp  event.hpp  xen_moe.cpp  xen_moe.hpp
csrc/kernels/: CMakeLists.txt  api.cuh  auto_tune.cuh  buffer.cuh  ibgda_device.cuh  internode.cu  internode_ll.cu  intranode.cu  runtime.cu  utils.cuh
csrc/tpu/: CMakeLists.txt  moe_all_to_all.cc  moe_all_to_all.h
csrc/tpu_kernels/: CMakeLists.txt  moe_all_to_all_tpu.cc  moe_all_to_all_tpu.h
tests/: test_autotune.py  test_backend.py  test_internode.py  test_intranode.py  test_low_latency.py  test_tpu_intranode.py
xen_moe/: backend.py  buffer.py
